2007-05-06 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/regtrack.c: test was never executed
	  because of the regression test being picky about white spaces.
	* device/lib/mcs51/crtclear.asm: added comment

2007-05-06 Raphael Neider <rneider AT web.de>

	* device/lib/pic/Makefile.rules,
	* device/lib/pic16/Makefile.rules: make sure *.ignore file exists,
	  made "&> /dev/null" redirection sh-safe ("> /dev/null 2>&1")

2007-05-06 Raphael Neider <rneider AT web.de>

	* src/pic16/device.h,
	* src/pic16/main.h,
	* src/pic16/main.c (pic16_optionsTable,_pic16_parseOptions,
	  _pic16_setDefaultOptions): removed/reordered command-line args
	* doc/sdccman.lyx: updated PIC14 and PIC16 documentation (supported
	  devices, regrouped command line args, environment variables),
	  clarified sone points, added sections on how to add devices to the
	  PIC14/PIC16 ports

2007-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/z80/peeph.def: fixed bug in rule 2

2007-05-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/port.h: added TARGET_MCS51_LIKE
	* src/SDCCpeeph.c (labelIsUncondJump): new, added, other targets could
	  take advantage of it too
	* src/z80/gen.c (genIpush): push b, d or h directly instead of using a,
	  (shiftR2Left2Result): Optimized: don't check shifting by 0
	* src/z80/peeph-z80.def,
	* src/z80/peeph.def: whole set of new rules by Philipp Krause with some
	  modifications, see patch 1700823
	* src/mcs51/peep.c (): fixed bug 1712928
	* support/regression/tests/bug1712928.c: new, added

2007-05-05 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/Makefile.common.in,
	  device/lib/pic/Makefile.common.in, sim/ucsim/cmd.src/Makefile.in:
	  removed bash dependencies

2007-05-01 Borut Razem <borut.razem AT siol.net>

	* src/SDCCicode.c:
	  fixed bug #1710507: --i-code-in-asm makes compile fail
	  all iCode comments are now one liners
	* src/mcs51/gen.c: fixed memory leak

2007-05-01 Raphael Neider <rneider AT web.de>